--- a/app/templates/keyframes_form.html
+++ b/app/templates/keyframes_form.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="keyframes-form">
+<div class="add-edit-form">
 {% if keyframes %}
     <h2>Modifica Keyframes</h2>
     <h3>
