--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,7 +35,7 @@
             {% endif %}
             {% if current_user.is_authenticated %}
                 <li>
-                    <a href="{{ url_for('auth.profile') }}" {% if request.endpoint == 'auth.profile' %}class="current"{% endif %}>{{ current_user.username }}</a>
+                    <a href="{{ url_for('auth.profile') }}" {% if request.endpoint == 'auth.profile' %}class="current"{% endif %}>Il mio profilo</a>
                 </li>
                 {% if current_user.is_admin %}
                     <li>
