--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -224,6 +224,7 @@ footer {
     padding: 6px 12px;
     background-color: #3498db;
     color: white;
+    margin: 2px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
