aggiunti test per keyframe_managements

--- a/app/templates/keyframes_form.html
+++ b/app/templates/keyframes_form.html
@@ -13,7 +13,7 @@
 {% block content %}
 <div class="add-edit-form">
 {% if keyframes %}
-    <h2>Modifica Keyframes</h2>
+    <h2>Modifica Keyframe</h2>
     <h3>
         Dispositivo: {{ device.name }} <br>
         Posizione: {{ keyframes[0].position }} <br>
