--- a/app/templates/auth/admin.html
+++ b/app/templates/auth/admin.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<h2>Gestione Utenti</h2>
+<h2 class="title-h2">Gestione Utenti</h2>
 <div class="device-table">
     <table>
         <thead>
@@ -27,17 +27,21 @@
                     <td>{{ 'Admin' if user.is_admin else 'Utente' }}</td>
                     <td>{{ 'Attivo' if user.is_active else 'Disattivato' }}</td>
                     <td>
+                        {% if not user.is_admin %}
                         <div class="table-button-container">
-                        {% if user.is_active %}
-                            <form action="{{ url_for('auth.deactivate') }}" method="post" style="display:inline;">
-                                <input type="hidden" name="user_id" value="{{ user.id }}">
-                                <button class="red-btn" type="submit">Disattiva</button>
-                            </form>
+                            {% if user.is_active %}
+                                <form action="{{ url_for('auth.deactivate') }}" method="post" style="display:inline;">
+                                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                                    <button class="red-btn" type="submit">Disattiva</button>
+                                </form>
+                            {% else %}
+                                <form action="{{ url_for('auth.activate') }}" method="post" style="display:inline;">
+                                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                                    <button class="green-btn" type="submit">Attiva</button>
+                                </form>
+                            {% endif %}
                         {% else %}
-                            <form action="{{ url_for('auth.activate') }}" method="post" style="display:inline;">
-                                <input type="hidden" name="user_id" value="{{ user.id }}">
-                                <button class="green-btn" type="submit">Attiva</button>
-                            </form>
+                            <span>/</span>
                         {% endif %}
                         </div>
                     </td>
