--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -2,38 +2,8 @@
 
 {% block title %}404 - Pagina non trovata{% endblock %}
 
-{% block styles %} 
-<style>
-    .container-handler404 {
-        font-family: 'Arial', sans-serif;
-        background-color: #f8f9fa;
-        color: #343a40;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 70vh;
-        text-align: center;
-    }
-    
-    .div-handler404 {
-        font-size: 4rem;
-        font-weight: bold;
-        margin-bottom: 1rem;
-        color: #dc3545;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        padding: 20px;
-    }
-      
-    .emoji {
-        font-size: 5rem;
-        margin-bottom: 1rem;
-        display: block;
-    }
-</style>
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/error.css') }}">
 {% endblock %}
 
 {% block header %}
@@ -41,8 +11,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-handler404">
-        <div class="div-handler404">404 - Pagina non trovata</div>
-        <span class="emoji">😕</span>
+    <div class="error-container-handler">
+        <div class="error-div-handler">404 - Pagina non trovata</div>
+        <span class="error-emoji">😕</span>
     </div>
 {% endblock %}
